examples/kubernetes/local/authelia/authelia.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
...
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: auth
spec:
  ports:
    - protocol: TCP
      name: web
      port: 9091
  selector:
    app: authelia
...
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: auth
  name: authelia
  labels:
    app: authelia
spec:
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      serviceAccountName: authelia
      containers:
        - name: authelia
          # Local development image
          # image: localhost/authelia/authelia:dev
          # Latest release
          image: authelia/authelia
          ports:
            - name: web
              containerPort: 9091
          volumeMounts:
            - mountPath: /config/configuration.yml
              subPath: configuration.yml
              name: config
              readOnly: true
            - mountPath: /config/users.yml
              subPath: users.yml
              name: users
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: authelia-config
        - name: users
          configMap:
            name: authelia-users
...
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: auth
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`auth.example.org`)
      kind: Rule
      services:
        - name: authelia
          namespace: auth
          port: 9091
  tls: {}
...
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: auth
spec:
  forwardAuth:
    address: http://authelia.auth.svc.cluster.local:9091/api/verify?rd=https://auth.example.org/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
...
